Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference54.out
MethodReference54.java:15:9: compiler.err.cant.resolve.location: kindname.variable, nonExistent, , , (compiler.misc.location: kindname.class, MethodReference54, null)
1 error
